# macRun

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_GITHUB.md  ROADMAP.md
.commandcode/taste/: taste.md
.commandcode/taste/architecture/: taste.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_report.yml  config.yml
compat-db/: CMakeLists.txt  README.md
compat-db/docs/: SCHEMA.md
compat-db/include/compatdb/: database.hpp  native_registry.hpp  types.hpp  validator.hpp
compat-db/manifests/: README.md
compat-db/manifests/electron/: electron-abi-map.json  electron-versions.json
compat-db/manifests/native/: registry.json
compat-db/manifests/native/patches/: better-sqlite3-12.10.0-setnativedataproperty.patch  better-sqlite3-12.10.0-v8-13-external.patch
compat-db/policies/: README.md
compat-db/reports/: README.md  claude-desktop.json  codex.json  cursor.json  deepseekgui.json  finalcutpro.json  obsidian.json  textedit.json  utm.json  vscode.json
compat-db/schema/: native-registry.schema.json  record.schema.json
compat-db/signatures/: README.md
compat-db/src/: database.cpp  native_registry.cpp  validator.cpp
compat-db/tests/: compatdb_tests.cpp  invalid-test.json
compat-db/tool/: CMakeLists.txt  main.cpp
docs/: OWNERSHIP.md  README.md
docs/architecture/: ARCHITECTURE_V6.md  COMPATIBILITY_SPECTRUM.md  COMPAT_DB.md  DEGRADATION_MODEL.md  ELECTRON_API_NORMALIZATION.md  EXECUTION_MODEL.md  FAILURE_MODEL.md  README.md  RUNTIME_NEGOTIATION.md  SEMANTIC_DIAGNOSTICS.md  SHIM_GOVERNANCE.md  SUBSTRATE_GOVERNANCE.md  SUBSTRATE_MODEL.md
docs/compatibility/: README.md
docs/design/: README.md
docs/diagrams/: README.md
docs/guides/claude desktop/: README.md
docs/guides/codex/: README.md
docs/guides/deepseek GUI/: README.md
docs/protocols/: README.md
docs/public/: ARCHITECTURE.md  GOVERNANCE.md  LIMITATIONS.md  README.md  project_overview.md
host/: CMakeLists.txt  README.md
host/audio/: CMakeLists.txt  placeholder.cpp
host/input/: CMakeLists.txt  placeholder.cpp
host/integration/: CMakeLists.txt  placeholder.cpp
host/proxy/: CMakeLists.txt  placeholder.cpp
host/wayland/: CMakeLists.txt  placeholder.cpp
platform/: CMakeLists.txt  README.md
platform/adapters/: CMakeLists.txt  IDarlingAdapter.hpp  IElectronAdapter.hpp  IQemuAdapter.hpp  IWebKitAdapter.hpp  darling_adapter.cpp  darling_adapter.hpp  electron_adapter.cpp  electron_adapter.cpp.recovered  electron_adapter.hpp  interfaces.hpp  qemu_adapter.cpp  qemu_adapter.hpp  webkit_adapter.cpp  webkit_adapter.hpp
platform/common/: CMakeLists.txt  types.hpp
platform/detector/: CMakeLists.txt  bundle.cpp  detector.hpp  diagnostics.hpp  entitlements.cpp  fingerprint.cpp  fingerprint.hpp  macho.cpp  pipeline.cpp  scoring.cpp  serialize.cpp  serialize.hpp  strategy.cpp
platform/macrun/: CMakeLists.txt  adapter_bridge.hpp  backend.cpp  input.cpp  macrun.hpp  macrun_types.hpp  orchestrator.cpp  serialize.cpp
platform/native/: CMakeLists.txt  native_abi_db.cpp  native_builder.cpp  native_cache.cpp  native_discovery.cpp
platform/native/include/native/: native_abi_db.hpp  native_builder.hpp  native_cache.hpp  native_discovery.hpp  native_types.hpp
runtime/: CMakeLists.txt  README.md
runtime/arm64/: CMakeLists.txt  placeholder.cpp
runtime/cocoa/: CMakeLists.txt  placeholder.cpp
runtime/common/: CMakeLists.txt  lifecycle.cpp  lifecycle.hpp  placeholder.cpp
runtime/darling/: CMakeLists.txt  placeholder.cpp
runtime/shims/: CMakeLists.txt  clipboard-bridge.js  disable-gpu.js  disable-sparkle.js  electron-normalization-registry.js  env-normalizer.js  esm-loader.mjs  install.sh  main-diag.js  mock-diagnostics-channel.mjs  mock-module.mjs  native-module-loader.js  notification-bridge.js  path-mapper.js  placeholder.cpp  platform-normalizer.js  preload-main.js  renderer-diag.js  shell-integration.js
scratch/: inspect.js  package.json  research_report_13274465.md  research_report_6f4d4248.md
tests/: CMakeLists.txt  README.md
tests/compatibility/: CMakeLists.txt  placeholder.cpp
tests/fixtures/: README.md  test.asar
tests/fixtures/bplist-app.app/Contents/: Info.plist
tests/fixtures/bplist-app.app/Contents/MacOS/: TestApp
tests/fixtures/cocoa-app.app/Contents/: Info.plist
tests/fixtures/cocoa-app.app/Contents/MacOS/: TextEdit
tests/fixtures/electron-app.app/Contents/: Info.plist
tests/fixtures/electron-app.app/Contents/MacOS/: Cursor
tests/fixtures/hypervisor-app.app/Contents/: Info.plist
tests/fixtures/hypervisor-app.app/Contents/MacOS/: UTM
tests/fixtures/swiftui-app.app/Contents/: Info.plist
tests/fixtures/swiftui-app.app/Contents/MacOS/: Raycast
tests/integration/: CMakeLists.txt  degradation_tests.cpp  electron_launch_tests.cpp  macrun_tests.cpp  normalization_tests.cpp  placeholder.cpp
tests/performance/: CMakeLists.txt  placeholder.cpp
tests/substrate/: CMakeLists.txt  lifecycle_tests.cpp
tests/unit/: CMakeLists.txt  adapter_tests.cpp  detector_tests.cpp  placeholder.cpp
tooling/: CMakeLists.txt  README.md
tooling/benchmark/: CMakeLists.txt  generate_fixtures.cpp  placeholder.cpp
tooling/devtools/: CMakeLists.txt  placeholder.cpp
tooling/extractor/: CMakeLists.txt  main.cpp  placeholder.cpp
tooling/inspector/: CMakeLists.txt  main.cpp
tooling/macrun-cli/: CMakeLists.txt  main.cpp  provision.cpp
vm/: CMakeLists.txt  README.md
vm/bridge/: CMakeLists.txt  placeholder.cpp
vm/capture/: CMakeLists.txt  placeholder.cpp
vm/encode/: CMakeLists.txt  placeholder.cpp
vm/lifecycle/: CMakeLists.txt  placeholder.cpp
vm/virtio/: CMakeLists.txt  placeholder.cpp
