# Platform Layer: Launcher and capability detection
# Architecture reference: docs/architecture/ARCHITECTURE_V6.md
#   - "macrun Contract" section
#   - "Capability Detection Engine" section
#   - "Detection Pipeline" stages 1-5

add_subdirectory(macrun)
add_subdirectory(detector)
add_subdirectory(common)
add_subdirectory(adapters)
