# Tests: Unit, integration, compatibility, and performance validation
# Architecture reference: docs/architecture/ARCHITECTURE_V6.md
#   - "Phase Exit Criteria" sections
#   - "Regression Policy"

add_subdirectory(unit)
add_subdirectory(integration)
add_subdirectory(compatibility)
add_subdirectory(substrate)
add_subdirectory(performance)
